--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
   <div id="show" style="display:none;">
     
   </div>
-  <button class="b1" id="1"  style="padding: 25px; margin-bottom: 4px; border-color: chocolate;  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px; "onclick='play("1")'; onclick="fun_1()";></button>
-  <button class="b1" id="2" style="padding: 25px;border-color: chocolate; box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;" onclick='play("2")'; onclick="fun_2()";></button>
-  <button class="b1" id="3" style="padding: 25px;border-color: chocolate; box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;"onclick='play("3")'; onclick="fun_3()";></button><br>
-  <button class="b1" id="4" style="padding: 25px; margin-bottom: 4px;border-color: chocolate; box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;"onclick='play("4")'; ></button>
-  <button class="b1" id="5" style="padding: 25px;border-color: chocolate; box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;"onclick='play("5")';></button>
-  <button class="b1" id="6" style="padding: 25px;border-color: chocolate; box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;"onclick='play("6")';></button><br>
-  <button class="b1" id="7" style="padding: 25px;border-color: chocolate; box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;"onclick='play("7")';></button>
-  <button class="b1" id="8" style="padding: 25px;border-color: chocolate; box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;"onclick='play("8")';></button>
-  <button class="b1" id="9" style="padding: 25px;border-color: chocolate; box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;"onclick='play("9")';></button><br>
+  <button class="b1" id="1"  style="padding: 25px; margin-bottom: 4px; border-right: 3px solid; border-bottom: 3px solid;"onclick='play("1")'; onclick="fun_1()";></button>
+  <button class="b1" id="2" style="padding: 25px; border-right: 3px solid; border-left: 3px solid; border-bottom: 3px solid" onclick='play("2")'; onclick="fun_2()";></button>
+  <button class="b1" id="3" style="padding: 25px; border-left: 3px solid; border-bottom: 3px solid;"onclick='play("3")'; onclick="fun_3()";></button><br>
+  <button class="b1" id="4" style="padding: 25px; margin-bottom: 4px; border-right: 3px solid; border-top: 3px solid; border-bottom: 3px solid;"onclick='play("4")'; ></button>
+  <button class="b1" id="5" style="padding: 25px; border-right: 3px solid; border-left: 3px solid; border-top: 3px solid; border-bottom: 3px solid;"onclick='play("5")';></button>
+  <button class="b1" id="6" style="padding: 25px; border-left: 3px solid; border-top: 3px solid; border-bottom: 3px solid;"onclick='play("6")';></button><br>
+  <button class="b1" id="7" style="padding: 25px; border-right: 3px solid; border-top: 3px solid;"onclick='play("7")';></button>
+  <button class="b1" id="8" style="padding: 25px; border-right: 3px solid; border-top: 3px solid; border-left: 3px solid;"onclick='play("8")';></button>
+  <button class="b1" id="9" style="padding: 25px; border-left: 3px solid; border-top: 3px solid;"onclick='play("9")';></button><br>
 
   <button onclick="reset()"; style="padding:20px ; margin-top: 40px; background-color: #FF99D7; font-weight: bold; font-size: medium; border-radius: 10px;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;";>RESET</button>
+  box-shadow: rgba(60, 10, 11, 1) 0px 7px 15px 0px;";>RESET</button>
 
   <div class="scorecard">
     <div id="left">
