--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>TIC TAC TOE</title>
+  <title>🎮TIC TAC TOE🎮</title>
   <link rel="stylesheet" href="index.css">
   <style>
     input[type="text"]{
